--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Young Serif", serif;
 }
 
 body{
@@ -25,6 +26,9 @@ img{
 h1{
     margin-bottom: 10px;
     padding-bottom: 5px;
+    font-family: "Young Serif", serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .prep-time{
@@ -35,6 +39,12 @@ h1{
     box-shadow: 0px 0.1px 5px rgb(167, 166, 166);
 }
 .prep-time h4{
+    margin-bottom: 5px;
+    font-weight: 200;
+    font-size: 15px;
+}
+
+.prep-time li{
     margin-bottom: 5px;
 }
 
@@ -54,14 +64,15 @@ li b{
 .making ul,ol{
     margin: 5px;
     padding: 5px;
+    font-family: "Young Serif", serif;
+    /* font-weight: 400; */
+    font-style: normal;
+    
+      
 }
 
 .nutrition p{
     display: inline-block;
-}
-
-.nutrition hr{
-    width: 80%;
 }
 
 .fact{
@@ -75,4 +86,9 @@ li b{
 }
 .fact{
     padding: 5px;
+}
+
+p, li{
+    font-size: 10px;
+    font-weight: 100;
 }
